--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <div class="card">
+    <div class="qr-code-container">
+      <img src="./images/image-qr-code.png" alt="QR-Code to FrontEnd Mentor">
+    </div>
+    <div class="text-container">
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
 
+  </div>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 
   <div class="attribution" hidden>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
