--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
 
-  <div class="attribution" hidden>
+  <div class="attribution hidden">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
