--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>Frontend Mentor | QR code component</title>
 
-  <div class="card">
+  <div class="card" role="main">
     <div class="qr-code-container">
     </div>
     <div class="text-container">
