--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <title>Frontend Mentor | QR code component</title>
 
   <div class="card" role="main">
-    <div class="qr-code-container">
-    </div>
+
+    <img class="qr-code-container" src="./images/image-qr-code.png" alt="">
+
     <div class="text-container">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
